--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
