--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
