fix: install app page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,17 +8,17 @@
   "background_color": "#F9F5F0",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/icon/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon (crop).png",
+      "src": "/icon/favicon (crop).png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "favicon (crop).png",
+      "src": "/icon/favicon (crop).png",
       "type": "image/png",
       "sizes": "512x512"
     }
