--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,12 +13,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/icon/favicon (crop).png",
+      "src": "/icon/favicon-crop.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/icon/favicon (crop).png",
+      "src": "/icon/favicon-crop.png",
       "type": "image/png",
       "sizes": "512x512"
     }
