--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.9.1",
     "web-vitals": "^5.1.0"
