--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@babel/plugin-transform-optional-chaining": "^7.27.1",
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@tsparticles/engine": "^3.9.1",
+    "@types/node": "^24.5.2",
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "eslint": "^9.35.0",
@@ -26,7 +29,8 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.3.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
