--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@babel/plugin-transform-private-methods": "^7.27.1",
     "@tsparticles/engine": "^3.9.1",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "eslint": "^9.35.0",
@@ -26,6 +24,13 @@
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@types/jest": "^30.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/testing-library__react": "^10.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "postcss-preset-env": "^10.3.1",
