--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"], 
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": true,
     "checkJs": false,
     "jsx": "react-jsx",
@@ -18,7 +18,7 @@
     "paths": {
       "@/*": ["*"]
     },
-    "types": [],
+    "types": ["react", "react-dom", "jest", "node"]
   },
   "include": ["src"],
   "exclude": ["node_modules", "build"]
